...

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cook"
                    android:id="@+id/recipe_cook_button"
                    android:clickable="false"
                    android:layout_gravity="center_vertical"/>

            </LinearLayout>


...
